--- a/index.html
+++ b/index.html
@@ -13,20 +13,47 @@
   <link rel="stylesheet" href="app.css">
 </head>
 
-<body class="font-content">
-  <div class="root">
+<body>
+  <div class="root font-content">
+    <!-- TODO add linkedin -->
+    <!-- TODO contact information -->
+    <!-- TODO resume -->
+    <!-- TODO Game Jams -->
+    <!-- TODO Work experiences -->
+    <div class="flex flex-row linked-in-container">
+      <a class="flex linked-in-link" href="https://linkedin.com/in/louis-simon-mc-nicoll-b08815107">
+        <img class="linked-in-image" src="img/linkedin.svg"></img>
+      </a>
+    </div>
     <section id="home" class="flex flex-column fill-viewport-height">
       <div class="flex home-title">
         <div class="shape-container">
           <b class="font-name">Louis-Simon Mc Nicoll</b>
           <div class="shape circle"></div>
         </div>
-        <!-- TODO add linkedin -->
-        <!-- TODO contact information -->
-        <!-- TODO resume -->
-        <!-- TODO Game Jams -->
-        <!-- TODO Work experiences -->
       </div>
+      <div class="flex flex-column home-text">
+        <div class="flex flex-column home-text-row">
+          <div>
+            <p>I am a software engineering student about to finish his undergraduate.<br><br></p>
+          </div>
+          <div>
+            <p>I am interested in</p>
+            <div class="flex flex-column home-text-row-list">
+              <div>Software Architecture</div>
+              <div>Project Management</div>
+              <div>Requirements Engineering</div>
+            </div>
+            <div>
+              <p><br>I am passionate in</p>
+            </div>
+            <div class="flex flex-column home-text-row-list">
+              <div>Customer Interactions</div>
+              <div>Performance and Availability Challenges</div>
+              <div>Multi Platform Development</div>
+            </div>
+          </div>
+        </div>
     </section>
 
     <!-- TODO make this work for mobile -->
@@ -34,7 +61,7 @@
       <a href="#home" class="current">Home</a>
       <a href="#projects">Projects</a>
       <a href="#skills">Skills</a>
-      <a href="#about">About</a>
+      <a href="#about">About Me</a>
     </nav>
 
     <section id="projects" class="nav-bar-padding">
@@ -212,6 +239,10 @@
               </th>
             </tr>
             <tr>
+              <td>Consumer Interactions</td>
+              <td>All of my work experience deal directly with consumers and their needs.</td>
+            </tr>
+            <tr>
               <td>Multicultural Environment</td>
               <td>8 months of work exprience in a Japanese company</td>
             </tr>
@@ -231,7 +262,8 @@
             </tr>
             <tr>
               <td>Linux</td>
-              <td>I like tinkering with Linux using my personnal computers and Raspberry Pis. My favorite distribution is Arch Linux.</td>
+              <td>I like tinkering with Linux using my personnal computers and Raspberry Pis. My favorite distribution
+                is Arch Linux.</td>
             </tr>
             <tr>
               <td>Development</td>
@@ -246,36 +278,31 @@
       </div>
     </section>
 
-    <!-- <div class="flex flex-column skills-left-container">
+    <section id="about" class="nav-bar-padding">
       <div>
-        <h3>Languages</h3>
-        <div>C++</div>
-        <div>Javascript</div>
-        <div>&nbsp;</div>
-        <div>Java</div>
-        <div>C#</div>
-        <div>Python</div>
-        <div>Rust</div>
-      </div>
-    </div>
-    <div class="flex flex-column skills-right-container">
-      <div>
-        <h3>&nbsp;</h3>
-        <div>Excellent understanding of c++ thanks to personnal projects <a href="#project1">[1]</a> and physics simulation courses <a
-            href="#project2">[2]</a></div>
-        <div>Extensive web development experience using modern frameworks such as React [1] and Angular [2]</div>
-        <div>Android development experience</div>
-        <div>Game Jams</div>
-        <div>Machine learning projects <a href="#project5">[1]</a></div>
-        <div>Familiarity with Rust from personnal projects <a href="#project4">[1]</a></div>
-      </div>
-    </div> -->
-
-    <section id="about" class="nav-bar-padding fill-viewport-height">
-      <div>
-        <h1 class="section-title">About</h1>
-        <div class="flex flex-column">
-
+        <h1 class="section-title">About me</h1>
+        <div class="flex flex-column about">
+          <div class="flex about about-row">
+            <img class="me-image" src="img/me-circle.png"></img>
+            <div class="flex flex-column about-text">
+              <p>During my eight months internship for the AI department of Rakuten in Tokyo, I got involved in every
+                step of the software development life cycle in a multicultural team where communication is often a
+                challenge. This experience made me realize that software is sometimes more about talking to people than
+                it is about talking to machines. I like accompanying a project all the way from deciphering the vision
+                of a customer to realizing it in a fully functional system. During my internship at Pratt & Whitney
+                Canada and my multiple Android development experiences, I had to establish the requirements from the
+                business processes and customer interviews, prototype and incorporate customer feedback, then develop
+                and validate applications to satisfy real needs. In three to five years I would like to have harnessed
+                enough experience to take on a leading role in an important and critical software project.
+              </p>
+              <div class="flex flex-row contact-me-row">
+                <a href="https://linkedin.com/in/louis-simon-mc-nicoll-b08815107">
+                  <img class="linked-in-image" src="img/linkedin.svg"></img>
+                </a>
+                <a class="resume-link" href="Resume_Louis-Simon_Mc_Nicoll_Public.pdf" download>Resume</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -283,10 +310,10 @@
 </body>
 
 <script>
-  let mainNavLinks = document.querySelectorAll("a");
+  let mainNavLinks = document.querySelectorAll("#navigation a");
 
   function updateNavStatus() {
-    var scrollY = window.scrollY;
+    let scrollY = window.scrollY;
 
     if (window.pageYOffset < window.innerHeight) {
       document.getElementById("navigation").classList.remove("fixed");
